# fastapi-archetype

./: .cgcignore  .dockerignore  .env.example  .gitignore  AGENTS.md  ARCH_DECISIONS.md  Dockerfile  INITIAL_CONTEXT.md  Justfile  NEW_REQUIREMENTS.md  PROJECT_CONTEXT.md  README.md  RELEASE_NOTES.md  node-autochglog.config.json  pyproject.toml
.bmad/implementation-artifacts/: 1-1-project-initialization-and-package-structure.md  1-6-configurable-database-driver-with-sqlite-default.md  11-1-auth-error-response-sanitization.md  11-2-synthetic-idp-integration-tests.md  11-3-role-mapping-provider-abstraction.md  13-1-decouple-auth-and-observability-tests-from-dummy-endpoints.md  13-2-demo-removal-script.md  14-1-remove-graph-role-retrieval-from-inbound-auth-path.md  14-2-preserve-rolemappingprovider-with-token-claims-resolver.md  14-3-remove-graph-centric-rbac-configuration-and-documentation.md  14-4-validate-token-only-rbac-with-integration-tests.md  14-5-zombie-code-eradication-for-legacy-rbac-path.md  15-1-entity-and-dto-structure.md  15-2-factories-module.md  15-3-wire-entities-dtos-and-remove-legacy-model.md  15-4-update-project-context-and-docs.md  16-1-add-uuid-to-entity-and-dtos-never-expose-id-to-clients.md  16-2-implement-put-on-dummies-by-uuid-with-path-body-validation.md  16-3-update-project-context-and-adding-a-new-resource-for-uuid-and-put.md  17-1-config-and-database-module-database-url-and-two-engine-setup-functions.md  17-2-docker-compose-and-compose-env-use-database-url-only.md  17-3-documentation-database-url-default-sqlite-and-url-escaping.md  17-4-tests-config-and-database-for-database-url.md  18-1-add-profile-to-configuration.md  18-2-dummy-service-contract-default-and-mock-implementations-and-wiring-v1.md  18-3-apply-profile-and-service-contract-pattern-to-v2-dummies.md  18-4-tests-for-profile-driven-service-selection-and-implementations.md  19-1-spec-docs-nfr1-and-architecture-references.md  19-2-architectural-decision-extend-ad-23-for-type-checking.md  19-3-implementation-add-ty-dependency-and-configuration.md  19-4-documentation-project-context-and-readme.md  19-5-agent-rules-agents-md-quality-checks.md  19-6-codebase-fix-all-ty-diagnostics-errors-and-warnings.md  2-1-aop-function-io-logging-decorator.md  2-2-application-logging-configuration.md  20-1-docker-hygiene.md  20-2-test-infrastructure-fixes.md  20-3-model-and-dataclass-improvements.md  20-4-configuration-and-dev-dependencies.md  21-1-remove-from-future-and-clean-up-import-hygiene.md  (+21 more)
.bmad/planning-artifacts/: prd-validation-report.md  product-brief-fastapi-archetype-2026-03-03.md
.bmad/planning-artifacts/architecture/: architecture-validation-results.md  core-architectural-decisions.md  implementation-patterns-consistency-rules.md  index.md  project-context-analysis.md  project-structure-boundaries.md  starter-template-evaluation.md
.cursor/commands/: bmad-bmm-sprint-run-all.md
.githooks/: pre-commit
_bmad/_config/: files-manifest.csv  manifest.yaml  workflow-manifest.csv
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
compose/: .env  docker-compose.yaml
compose/observability/: otel-collector-config.yaml  prometheus.yaml
scripts/: build_template.py  remove_demo.py
src/fastapi_archetype/: main.py
tests/: conftest.py
tests/aop/: test_logging_decorator.py  test_logging_decorator_branches.py
tests/api/: test_cors.py  test_dummy_routes.py  test_health.py  test_profile_service_selection.py  test_v2_dummy_routes.py
tests/auth/: conftest.py  test_auth_forbidden.py  test_auth_unauthorized.py  test_dependencies.py  test_entra_integration.py  test_external_provider.py  test_facade.py  test_facade_role_mapper.py  test_factory_and_none_provider.py  test_require_role_uses_mapper.py  test_role_mapping.py  test_role_mapping_providers.py
tests/core/: test_config.py  test_database.py  test_errors.py  test_rate_limit.py
tests/observability/: test_exception_formatting.py  test_json_renderer.py  test_log_mode_configuration.py  test_logging.py  test_logging_conventions.py  test_otel.py  test_plain_renderer.py  test_prometheus.py  test_secret_redaction.py
tests/services/: test_dummy_service.py
(+99 files in other folders)
